--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,7 +8,6 @@
             <div class="flex items-center justify-between w-full md:w-auto">
                 {{ $logo := resources.Get "images/logo.png" }}
                 <a href="/">
-                    <span class="sr-only">Workflow</span>
                     <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
                 </a>
                 <div class="-mr-2 flex items-center md:hidden">
@@ -23,9 +22,8 @@
         </div>
         <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
             <a href="#facilities" class="font-bold text-gray-500 hover:text-gray-900">Facilities</a>
-            <a href="#staff" class="font-bold text-gray-500 hover:text-gray-900">Staff</a>
             <a href="#faq" class="font-bold text-gray-500 hover:text-gray-900">FAQ</a>
-            <a href="#contact" class="font-bold text-gray-500 hover:text-gray-900">Contact</a>
+            <a href="/daycamp" class="font-bold text-gray-500 hover:text-gray-900">Daycamp</a>
         </div>
     </nav>
 </div>
