--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -20,7 +20,7 @@
         </picture>
     </div>
     <div class="absolute z-10 bottom-0 inset-x-0 py-10" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 40%, rgba(0, 0, 0, .8) 100%);">
-        <div class="container mx-auto text-center flex flex-col">
+        <div class="container px-4 mx-auto text-center flex flex-col">
             <h1 class="text-5xl font-extrabold text-white mb-3">
                 Angelic Treasures Daycamp
             </h1>
@@ -28,14 +28,6 @@
             <a href="#contact" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10 place-self-center">
                 Sign Up Today
             </a>
-            <!--
-            <form class="flex w-full max-w-sm mx-auto space-x-3">
-                <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
-                <button class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200">
-                    Sign up
-                </button>
-            </form>
-            -->
         </div>
     </div>
 </div>
