--- a/layouts/partials/camp/form.html
+++ b/layouts/partials/camp/form.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-    <form method="POST" id="contact" action="/thanks/" netlify>
+    <form method="POST" name="daycamp" action="/thanks/" netlify>
         <div class="shadow overflow-hidden rounded-lg">
             <div class="px-4 py-5 sm:p-6 bg-white">
                 <div class="mb-3">
