--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,4 +1,4 @@
-<form method="POST" id="contact" action="/thanks/" netlify>
+<form method="POST" name="contact" action="/thanks/" netlify>
     <div class="shadow overflow-hidden rounded-lg">
         <div class="px-4 py-5 sm:p-6 bg-white">
             <div class="mb-3">
@@ -13,7 +13,7 @@
                 <label for="phone" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
                 <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
             </div>
-            <fieldset class="mb-3">
+            <fieldset>
                 <legend class="block text-xs mb-1 font-medium text-gray-500 uppercase">
                     Age of your Children
                 </legend>
@@ -36,19 +36,6 @@
                 <label class="flex items-center text-sm font-medium text-gray-700 py-1">
                     <input type="checkbox" name="age[]" value="Before & After" class="rounded mr-2">
                     Before & After (4&ndash;12 years)
-                </label>
-            </fieldset>
-            <fieldset>
-                <legend class="block text-xs mb-1 font-medium text-gray-500 uppercase">
-                    Type of Tour
-                </legend>
-                <label class="inline-flex items-center text-sm font-medium text-gray-700 py-1">
-                    <input type="radio" class="form-radio" name="tour_type" value="In-person" required>
-                    <span class="ml-2">In-person</span>
-                </label>
-                <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700 py-1">
-                    <input type="radio" class="form-radio" name="tour_type" value="Virtual" required>
-                    <span class="ml-2">Virtual</span>
                 </label>
             </fieldset>
         </div>
