--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -111,7 +111,7 @@
         <div class="divider mx-auto"></div>
     </div>
     <div class="grid grid-flow-row lg:grid-cols-7 lg:grid-rows-3 gap-6">
-        <div class="rounded-xl shadow flex flex-col bg-green-500 p-5 text-white col-span-2 row-span-2">
+        <div class="rounded-xl shadow flex flex-col bg-green-500 p-5 text-white lg:col-span-2 lg:row-span-2">
             <h4 class="text-xl font-bold mb-2">Contact Us</h4>
             <div class="mb-2">
                 <a href="tel:6478121179" class="flex items-center">
@@ -138,10 +138,10 @@
                 </a>
             </div>
         </div>
-        <div class="col-span-3 row-span-3">
+        <div class="lg:col-span-3 lg:row-span-3">
             {{ partial "camp/form" . }}
         </div>
-        <div class="rounded-xl shadow flex flex-col bg-blue-500 p-5 text-white col-span-2 row-span-2">
+        <div class="rounded-xl shadow flex flex-col bg-blue-500 p-5 text-white lg:col-span-2 lg:row-span-2">
             <div>
                 <h4 class="text-xl font-bold mb-2">Pricing</h4>
             </div>
