--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -3,7 +3,7 @@
 {{ .Content }}
 
 <div class="container px-4 bg-white mx-auto py-5">
-    {{ $logo := resources.Get "images/logo.png" }}
+    {{ $logo := resources.Get "images/logo.svg" }}
     <a href="/">
         <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
     </a>
