--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,7 +6,7 @@
     <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
         <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
             <div class="flex items-center justify-between w-full md:w-auto">
-                {{ $logo := resources.Get "images/logo.png" }}
+                {{ $logo := resources.Get "images/logo.svg" }}
                 <a href="/">
                     <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
                 </a>
