--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -38,9 +38,10 @@
      x-transition:leave-end="opacity-0 scale-95">
     <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
         <div class="px-5 pt-4 flex items-center justify-between">
-            {{ $logo := resources.Get "images/logo.jpg" }}
             <div>
-                <img class="h-8 w-auto" src="{{ $logo.RelPermalink }}" alt="Logo">
+                {{ with resources.Get "images/logo.svg" }}
+                <img class="h-8 w-auto" src="{{ .RelPermalink }}" alt="Logo">
+                {{ end }}
             </div>
             <div class="-mr-2">
                 <button type="button" @click="open = false" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-offset-pink-600">
