--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -3,9 +3,10 @@
 {{ .Content }}
 
 <div class="container px-4 bg-white mx-auto py-5">
-    {{ $logo := resources.Get "images/logo.svg" }}
-    <a href="/">
-        <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
+    {{ $logo := resources.Get "images/firstsmiles.svg" }}
+    <a href="/" class="flex items-center gap-x-4">
+        <img class="w-auto h-14" src="{{ $logo.RelPermalink }}">
+        <span>First Smiles Daycare</span>
     </a>
 </div>
 
