--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,9 +6,10 @@
     <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
         <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
             <div class="flex items-center justify-between w-full md:w-auto">
-                {{ $logo := resources.Get "images/logo.svg" }}
-                <a href="/">
-                    <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
+                {{ $logo := resources.Get "images/firstsmiles.svg" }}
+                <a href="/" class="flex items-center gap-x-4">
+                    <img class="w-auto h-14" src="{{ $logo.RelPermalink }}">
+                    <span>First Smiles Daycare</span>
                 </a>
                 <div class="-mr-2 flex items-center md:hidden">
                     <button type="button" @click="open = true" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-offset-pink-600" aria-expanded="false">
