Remove ATCD references

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -58,7 +58,7 @@
             <div class="h-full flex flex-col align-middle justify-center">
                 <h2 class="main-heading">About Us</h2>
                 <div class="divider"></div>
-                <p class="text-gray-600 mb-2">Angelic Treasures Childcare is where quality and education meet family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child's social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
+                <p class="text-gray-600 mb-2">First Smiles Daycare is where quality and education meet family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child's social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
                 <p class="text-gray-600">We love your angels as much as you do, so it’s no wonder we’re the best at what we do.</p>
             </div>
         </div>
@@ -83,7 +83,7 @@
 <div class="py-20">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
-            <h2 class="main-heading">Your Angelic Treasure Belongs Here</h2>
+            <h2 class="main-heading">Your Smiling Child Belongs Here</h2>
             <div class="divider mx-auto"></div>
         </div>
         <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -148,19 +148,19 @@
                 </a>
             </div>
             <div class="flex items-center mb-2">
-                <a href="https://www.facebook.com/atcdAurora" rel="noreferrer" target="_blank" class="flex items-center">
+                <a href="https://www.facebook.com/firstsmilesdaycare" rel="noreferrer" target="_blank" class="flex items-center">
                     <div class="h-6 w-6 mr-2">
                         {{ readFile "assets/images/icons/facebook.svg" | safeHTML }}
                     </div>
-                    atcdaurora
+                    firstsmilesdaycare
                 </a>
             </div>
             <div class="flex items-center mb-4">
-                <a href="https://www.instagram.com/angelic.treasures.aurora/" rel="noreferrer" target="_blank" class="flex items-center">
+                <a href="https://www.instagram.com/firstsmilesdaycare/" rel="noreferrer" target="_blank" class="flex items-center">
                     <div class="h-6 w-6 mr-2">
                         {{ readFile "assets/images/icons/instagram.svg" | safeHTML }}
                     </div>
-                    angelic.treasures.aurora
+                    firstsmilesdaycare
                 </a>
             </div>
         </div>
