--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -23,7 +23,7 @@
     <div class="absolute z-10 bottom-0 inset-x-0 py-10" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 40%, rgba(0, 0, 0, .8) 100%);">
         <div class="container px-4 mx-auto text-center flex flex-col">
             <h1 class="text-5xl font-extrabold text-white mb-3">
-                Angelic Treasures Daycamp
+                First Smiles Daycamp
             </h1>
             <p class="text-white mb-5 text-lg italic">Join Us for a Summer of Fun, Learning and New Friends</p>
             <a href="#contact" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10 place-self-center">
@@ -123,19 +123,19 @@
                 </a>
             </div>
             <div class="flex items-center mb-2">
-                <a href="https://www.instagram.com/angelic.treasures.aurora/" rel="noreferrer" target="_blank" class="flex items-center">
+                <a href="https://www.instagram.com/firstsmilesdaycare/" rel="noreferrer" target="_blank" class="flex items-center">
                     <div class="h-6 w-6 mr-2">
                         {{ readFile "assets/images/icons/instagram.svg" | safeHTML }}
                     </div>
-                    angelic.treasures.aurora
+                    firstsmilesdaycare
                 </a>
             </div>
             <div class="flex items-center mb-2">
-                <a href="https://www.facebook.com/atcdAurora" rel="noreferrer" target="_blank" class="flex items-center">
+                <a href="https://www.facebook.com/firstsmilesdaycare" rel="noreferrer" target="_blank" class="flex items-center">
                     <div class="h-6 w-6 mr-2">
                         {{ readFile "assets/images/icons/facebook.svg" | safeHTML }}
                     </div>
-                    atcdaurora
+                    firstsmilesdaycare
                 </a>
             </div>
         </div>
