--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="bg-gray-800 text-white">
     <div class="container mx-auto py-8 px-4">
-        &copy;{{ now.Year }} Angelic Treasures Christian Daycare
+        &copy;{{ now.Year }} First Smiles Daycare
     </div>
 </div>
