--- a/layouts/index.html
+++ b/layouts/index.html
@@ -58,8 +58,8 @@
             <div class="h-full flex flex-col align-middle justify-center">
                 <h2 class="main-heading">About Us</h2>
                 <div class="divider"></div>
-                <p class="text-gray-600 mb-2">First Smiles Daycare is where quality and education meet family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child's social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
-                <p class="text-gray-600">We love your angels as much as you do, so it’s no wonder we’re the best at what we do.</p>
+                <p class="text-gray-600 mb-2">Welcome to First Smiles Daycare Center, where every child's journey begins with love, laughter and learning. At First Smiles, we are dedicated to not only providing a safe and stimulating environment for children to grow and explore but also instilling in them the timeless principles of kindness, compassion, and respect inspired by our faith.</p>
+                <p class="text-gray-600 mb-2">Our experienced team of early childhood educators integrates Christian values into daily activities and interactions, fostering a sense of community and belonging for each child. With our commitment to holistic development and spiritual growth, First Smiles is more than just a daycare—it's a place where children can thrive in mind, body, and spirit. Join our First Smiles family today and experience the difference that faith-based childcare can make!</p>
             </div>
         </div>
     </div>
