--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -40,7 +40,7 @@
     <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
         <div class="px-5 pt-4 flex items-center justify-between">
             <div>
-                {{ with resources.Get "images/logo.svg" }}
+                {{ with resources.Get "images/firstsmiles.svg" }}
                 <img class="h-8 w-auto" src="{{ .RelPermalink }}" alt="Logo">
                 {{ end }}
             </div>
