--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,8 +8,8 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-700 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">Your Amazing Child</span>
-                        <span class="block text-blue-400 xl:inline">belongs here</span>
+                        <span class="block xl:inline">A Child's First Smiles</span>
+                        <span class="block text-blue-400 xl:inline">happen here</span>
                     </h1>
                     <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                         We provide quality child care, before & after and summer camps for young children of all faiths and backgrounds.
