--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="bg-pink-600 text-white py-2">
+<div class="bg-blue-800 text-white py-2">
     <div class="container px-4 mx-auto text-sm flex items-center justify-between">
         <a href="tel:6478121179" class="inline-flex items-center">
             <span class="h-5 w-5 mr-1">
