--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -13,31 +13,15 @@
                 <label for="phone" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
                 <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
             </div>
-            <fieldset>
-                <legend class="block text-xs mb-1 font-medium text-gray-500 uppercase">
-                    Age of your Children
-                </legend>
-                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
-                    <input type="checkbox" name="age[]" value="Infant" class="rounded mr-2">
-                    Infant (1&ndash;18 months)
-                </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
-                    <input type="checkbox" name="age[]" value="Toddler" class="rounded mr-2">
-                    Toddler (18 months&ndash;2&half; years)
-                </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
-                    <input type="checkbox" name="age[]" value="Preschool" class="rounded mr-2">
-                    Preschool (2&half;&ndash;4 years)
-                </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
-                    <input type="checkbox" name="age[]" value="Kindergarten" class="rounded mr-2">
-                    Kindergarten (4&ndash;5 years)
-                </label>
-                <label class="flex items-center text-sm font-medium text-gray-700 py-1">
-                    <input type="checkbox" name="age[]" value="Before & After" class="rounded mr-2">
-                    Before & After (4&ndash;12 years)
-                </label>
-            </fieldset>
+            <label for="dob" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Child Date of Birth</label>
+            <div class="relative">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+                    </svg>
+                </div>
+                <input datepicker datepicker-autohide  type="text" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md ps-10 " placeholder="Select date">
+            </div>
         </div>
         <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
             <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-400 hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
