--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -3,21 +3,21 @@
         <div class="px-4 py-5 sm:p-6 bg-white">
             <div class="mb-3">
                 <label for="name" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Name of Parent</label>
-                <input type="text" name="name" id="name" autocomplete="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
+                <input type="text" name="name" id="name" autocomplete="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm sm:leading-6 border-gray-300 rounded-md" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Email Address</label>
-                <input type="email" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
+                <input type="email" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm sm:leading-6 border-gray-300 rounded-md" required>
             </div>
             <div class="mb-3">
                 <label for="phone" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Phone Number</label>
-                <input type="text" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
+                <input type="tel" name="phone" id="phone" autocomplete="tel" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm sm:leading-6 border-gray-300 rounded-md" required>
             </div>
             <div>
                 <label for="dob" class="block text-xs mb-1 font-medium text-gray-500 uppercase">Child Date of Birth</label>
                 <div class="flex rounded-md shadow-sm">
-                    <input type="date" name="dob" class="block w-full rounded-none rounded-l-md border-0 py-1.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                    <button type="button" class="relative -ml-px inline-flex items-center gap-x-1.5 rounded-r-md px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50" onclick="this.previousElementSibling.showPicker();">
+                    <input type="date" name="dob" class="block w-full rounded-none rounded-l-md border-gray-300 focus:ring-indigo-500 sm:text-sm sm:leading-6">
+                    <button type="button" class="relative -ml-px inline-flex items-center gap-x-1.5 rounded-r-md border border-gray-300 px-3 py-2 hover:bg-gray-50" onclick="this.previousElementSibling.showPicker();">
                         <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
                         </svg>
