--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -3,7 +3,7 @@
 {{ .Content }}
 
 <div class="container px-4 bg-white mx-auto py-5">
-    {{ $logo := resources.Get "images/firstsmiles.svg" }}
+    {{ $logo := resources.Get "images/logo.svg" }}
     <a href="/" class="flex items-center gap-x-4">
         <img class="w-auto h-14" src="{{ $logo.RelPermalink }}">
         <span>First Smiles Daycare</span>
