--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,7 +9,7 @@
                 {{ $logo := resources.Get "images/logo.svg" }}
                 <a href="/" class="flex items-center gap-x-4">
                     <img class="w-auto h-14" src="{{ $logo.RelPermalink }}">
-                    <span>First Smiles Daycare</span>
+                    <span class="hidden">First Smiles Daycare</span>
                 </a>
                 <div class="-mr-2 flex items-center md:hidden">
                     <button type="button" @click="open = true" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-offset-pink-600" aria-expanded="false">
@@ -39,7 +39,7 @@
     <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
         <div class="px-5 pt-4 flex items-center justify-between">
             <div>
-                {{ with resources.Get "images/firstsmiles.svg" }}
+                {{ with resources.Get "images/logo.svg" }}
                 <img class="h-8 w-auto" src="{{ .RelPermalink }}" alt="Logo">
                 {{ end }}
             </div>
