--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,22 +6,22 @@
             {{ partial "nav.html" . }}
 
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-                <div class="sm:text-center lg:text-left">
-                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-700 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">A Child's First Smiles</span>
-                        <span class="block text-blue-400 xl:inline">happen here</span>
+                <div class="sm:text-center lg:text-left grid grid-cols-1 gap-y-6">
+                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-700 sm:text-5xl md:text-6xl text-balance">
+                        <span class="block xl:inline">First Smiles</span>
+                        <span class="block text-navy-400 xl:inline">happen here</span>
                     </h1>
-                    <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        We provide quality child care, before & after and summer camps for young children of all faiths and backgrounds.
+                    <p class="text-base text-gray-500 sm:text-lg sm:max-w-xl sm:mx-auto md:text-xl lg:mx-0 text-balance">
+                        We provide quality faith based child care, before & after and summer camps for young children of all faiths.
                     </p>
-                    <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
+                    <div class="sm:flex sm:justify-center lg:justify-start">
                         <div class="rounded-full shadow">
-                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
+                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-mint-800 bg-keppel-500 hover:bg-keppel-700 md:py-4 md:text-lg md:px-10">
                                 Our Programs
                             </a>
                         </div>
                         <div class="mt-3 sm:mt-0 sm:ml-3">
-                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
+                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-coral-500 hover:bg-coral-700 md:py-4 md:text-lg md:px-10">
                                 Book a Tour
                             </a>
                         </div>
