--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,7 +6,7 @@
     <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
         <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
             <div class="flex items-center justify-between w-full md:w-auto">
-                {{ $logo := resources.Get "images/logo.svg" }}
+                {{ $logo := resources.Get "images/logo2.svg" }}
                 <a href="/" class="flex items-center gap-x-4">
                     <img class="w-auto h-14" src="{{ $logo.RelPermalink }}">
                     <span class="hidden">First Smiles Daycare</span>
@@ -39,7 +39,7 @@
     <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
         <div class="px-5 pt-4 flex items-center justify-between">
             <div>
-                {{ with resources.Get "images/logo.svg" }}
+                {{ with resources.Get "images/logo2.svg" }}
                 <img class="h-8 w-auto" src="{{ .RelPermalink }}" alt="Logo">
                 {{ end }}
             </div>
