--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,7 +7,7 @@ body {
 }
 
 .bg-gradient {
-    background: linear-gradient(#d7eaff, #ffe1ef);
+    @apply bg-gradient-to-b from-keppel-100 to-keppel-300;
 }
 
 .main-heading {
@@ -15,7 +15,7 @@ body {
 }
 
 .divider {
-    @apply bg-pink-600 pt-1 mt-2 mb-4 w-20;
+    @apply bg-coral-500 pt-1 mt-2 mb-4 w-20;
 }
 
 .two-col {
