--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
                     </p>
                     <div class="sm:flex sm:justify-center lg:justify-start">
                         <div class="rounded-full shadow">
-                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-mint-800 bg-keppel-500 hover:bg-keppel-700 md:py-4 md:text-lg md:px-10">
+                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-keppel-800 bg-keppel-500 hover:bg-keppel-700 md:py-4 md:text-lg md:px-10">
                                 Our Programs
                             </a>
                         </div>
