--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -5,7 +5,7 @@
             <button class="w-full px-8 py-6 text-left focus:outline-none"
                     @click="selected !== {{ $i }} ? selected = {{ $i }} : selected = null">
                 <div class="flex items-center justify-between">
-                    <span class="text-pink-500 text-lg font-bold">{{ $item.question }}</span>
+                    <span class="text-keppel-500 text-lg font-bold">{{ $item.question }}</span>
                     <span :class="{ 'rotate-180': selected == {{ $i }} }" class="h-5 w-5 transform transition-transform">
                         {{ readFile "assets/images/icons/chevron.svg" | safeHTML }}
                     </span>
