--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,12 +16,12 @@
                     </p>
                     <div class="sm:flex sm:justify-center lg:justify-start">
                         <div class="rounded-full shadow">
-                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-keppel-800 bg-keppel-500 hover:bg-keppel-700 md:py-4 md:text-lg md:px-10">
+                            <a href="#programs" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-keppel-500 hover:bg-keppel-700 md:py-4 md:text-lg md:px-10">
                                 Our Programs
                             </a>
                         </div>
                         <div class="mt-3 sm:mt-0 sm:ml-3">
-                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-coral-500 hover:bg-coral-700 md:py-4 md:text-lg md:px-10">
+                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-navy-500 hover:bg-coral-700 md:py-4 md:text-lg md:px-10">
                                 Book a Tour
                             </a>
                         </div>
