--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -22,7 +22,7 @@
                 </address>
                 <div>
                     <div class="flex justify-center mt-4 mb-2">
-                        <a href="tel:6478121179" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-coral-500 hover:bg-coral-700 md:py-4 md:text-lg md:px-10">
+                        <a href="tel:6478121179" class="px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-navy-500 hover:bg-coral-700 md:py-4 md:text-lg md:px-10">
                             Call Us
                         </a>
                     </div>
